# robotframework-okw4robot

./: CHANGELOG.md  README.md  README_de.md  pyproject.toml  run.ps1
.github/workflows/: libdoc.yml
docs/: CONTRACT.md  KEYWORDS.md  OKW4RobotLibrary.html  README.md  SPECIFICATION.md  context.md  executejs-snippets.md  keywords_attribute.md  keywords_caption.md  keywords_host_app.md  keywords_host_app_uebersicht.md  keywords_label.md  keywords_list.md  keywords_placeholder.md  keywords_table.md  keywords_table_headers.md  keywords_tooltip.md  modules.md  okw_parameters.md  okw_parameters_de.md  radiolist.md  regex_best_practices.md  synchronization_strategy.md  table_tokens.md  widgets_common.md
docs/diagramms/: adapters_overview.puml  adapters_sequence.puml  sync_read.puml  sync_write.puml  widgets_inheritance.puml
docs/examples/: table_demo.html
locators/web/: TableDemo.yaml
prompts/: okw-testgenerator.md
scripts/: build.ps1  libdoc.ps1  publish.ps1  push.ps1
tests/: Login.robot  Login_alt.robot  TableTokens.robot  Web_Attribute.robot  Web_Caption.robot  Web_Focus.robot  Web_Label.robot  Web_List_VerifyCounts.robot  Web_Placeholder.robot  Web_Table_VerifyByHeaders.robot  Web_Table_VerifyByHeadersREGX.robot  Web_Table_VerifyCell.robot  Web_Table_VerifyColumn.robot  Web_Table_VerifyContent.robot  Web_Table_VerifyCounts.robot  Web_Table_VerifyHasRow.robot  Web_Table_VerifyRow.robot  Web_VerifyEditable.robot  Web_VerifyEnabled.robot  Web_VerifyExist.robot  Web_VerifyFocusable.robot  Web_VerifyHasFocus.robot  Web_VerifyVisible.robot  WidgetsDemo.robot  demo.robot  swingtest.robot  test_swingset3_structure.robot
(+32 files in other folders)
